--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -1,25 +1,24 @@
 @charset "UTF-8";
 
 //Colors
-$pink: #ef5ba1;
+$pink:#F2617A;
 $white: #fff;
 $white-90-percent-opacity: rgba(255, 255, 255, 0.9);
 $black: #000;
 $gray: #4a4a4a;
 $light-gray: #efefef;
 $seafoam-blue: #80c9d2;
-$nice-blue: #1a73ba;
-$section-heading-background: #6a2569;
+$nice-blue: #003D4F;
+$section-heading-background: #634F7D;
 $archive-bg-year: #f5f5f5;
 $archive-bg-month: #f1f1f1;
 $archive-bg-content: #ededed;
-$archive-active: rgba(255, 255, 255, 0.5);
+$archive-active: rgba(71, 161, 173, 0.5);
 
 //Images
-$tw-logo: url('../img/tw-logo-white.svg');
-$tw-rebrand-logo: url('../img/tw-rebrand-logo.svg');
+$tw-logo: url('../img/tw-logo-black.svg');
 $geeknight-logo: url('../img/geek_night_logo.svg');
-$thoughtworks-logo: url('../img/tw-logo-black.svg');
+$tw-footer-logo: url('../img/tw-logo-white.svg');
 $direction-img: url('../img/direction.svg');
 $intro-background: url('../img/intro_background.jpg');
 $intro-banner: url('../img/intro-banner.png');
