--- a/layouts/_footer_section.html.erb
+++ b/layouts/_footer_section.html.erb
@@ -1,8 +1,7 @@
 <footer id="footer" class="footer">
-    <div class="logo-section">
-        <a href="http://www.thoughtworks.com" target="_blank" onclick="ga('send', 'event', 'tw', 'tw')">
-            <span class="sponsored-by">Sponsored by</span>
-        </a>
-        <div class="logo"></div>
-    </div>
+    <a href="http://www.thoughtworks.com" target="_blank" onclick="ga('send', 'event', 'tw', 'tw')">
+        <div class="logo-section">
+            <span class="sponsored-by">Sponsored by</span><div class="logo"></div>
+        </div>
+    </a>
 </footer>
