--- a/layouts/_intro_section.html.erb
+++ b/layouts/_intro_section.html.erb
@@ -4,7 +4,7 @@
             <div class="mask"><div class="blur"></div></div>
             <div class="intro-info">
                 <div class="intro-info-place">
-                    <div class="intro-info-place-title">Geeknight Chennai</div>
+                    <div class="intro-info-place-title">Geek Night Chennai</div>
                     <div class="line"></div>
                 </div>
                 <div class="intro-info-edition"><%= @item[:edition] %><sup><%= @item[:edition].ordinal %></sup> Edition <%= @item[:isWebinar] ? '(Webinar)' : '' %> </p></div>
