--- a/content/static/css/_header.scss
+++ b/content/static/css/_header.scss
@@ -26,7 +26,7 @@
 			display: flex;
 			flex: 1 1 50%;
 			.logo {
-				background: $tw-rebrand-logo no-repeat center;
+				background: $tw-logo no-repeat center;
 				background-size: 580px;
 				height: 65px;
 				width: 200px;
