--- a/content/static/css/_common.scss
+++ b/content/static/css/_common.scss
@@ -3,7 +3,7 @@ html {
 	height: 100%;
 	min-width: 924px;
 	overflow: auto;
-	font-family: 'OpenSans', sans-serif;
+	font-family: 'OpenSans', 'Roboto', sans-serif;
 	@media #{$mobile} {
 		min-width: 300px;
 	}
