--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -3,7 +3,7 @@ html {
   height: 100%;
   min-width: 924px;
   overflow: auto;
-  font-family: 'OpenSans', sans-serif; }
+  font-family: 'OpenSans', 'Roboto', sans-serif; }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     html {
       min-width: 300px; } }
