--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -8,11 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Geek Night Chennai - <%= title %></title>
     <meta name="description" content="" />
+    <meta property="og:image" content="img/intro-banner.png"/>
+    <meta property="og:image:width" content="3125" />
+    <meta property="og:image:height" content="1042"/>
 
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <link rel="shortcut icon" href="/geeknight/favicon.ico" type="image/x-icon" />
-    
+
     <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/app.css" />
 
