--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Geek Night Chennai - <%= title %></title>
     <meta name="description" content="" />
-    <meta property="og:image" content="img/intro-banner.png"/>
+    <meta property="og:image" content="https://chennai.geeknight.in/img/intro-banner.png"/>
     <meta property="og:image:width" content="3125" />
     <meta property="og:image:height" content="1042"/>
 
